--- a/pom.xml
+++ b/pom.xml
@@ -113,15 +113,14 @@
 		</plugins>
 	</build>
 	<distributionManagement>
-		<repository>
-			<id>nexus</id>
-			<name>Releases</name>
-			<url>http://13.202.10.245:8081/repository/maven-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>nexus</id>
-			<name>Snapshot</name>
-			<url>http://13.202.10.245:8081/repository/maven-snapshots/</url>
-		</snapshotRepository>
+	    <repository>
+	        <id>maven-releases</id>
+	        <url>http://13.202.10.245:8081/repository/maven-releases/</url>
+	    </repository>
+	    <snapshotRepository>
+	        <id>maven-snapshots</id>
+	        <url>http://13.202.10.245:8081/repository/maven-snapshots/</url>
+	    </snapshotRepository>
 	</distributionManagement>
+
 </project>
